@@ -1,3 +1,4 @@
+* FEA#8126 Add new claim process type for declaration and reopening
 * FEA#8116 Add claim name column in claim view list when starting the declaration process
 * FEA#7620 Add the method set_sub_status in order to update the claim sub status in the process configuration
 
